Filtered search width fix on Roadmap
Add style to prevent filtered search from overflowing
the width available

--- a/ee/app/assets/stylesheets/pages/requirements.scss
+++ b/ee/app/assets/stylesheets/pages/requirements.scss
@@ -23,12 +23,6 @@
 }
 
 .requirements-list-container {
-  .gl-search-box-by-click {
-    .gl-filtered-search-scrollable {
-      border-radius: 0;
-    }
-  }
-
   .requirements-list {
     li .issuable-main-info {
       // These rules prevent adjecant REQ ID from wrapping
